# fg42

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cache/: KVCache.cpp  KVCache.h
memory/: BaseAllocator.cpp  BaseAllocator.h  CPUMemoryAllocator.cpp  CPUMemoryAllocator.h  Common.cpp  Common.h  NvidiaGPUMemoryAllocator.cpp  NvidiaGPUMemoryAllocator.h
model/: AutoModel.cpp  AutoModel.h  BaseModel.cpp  BaseModel.h  Common.h  Qwen2.cpp  Qwen2.h  Qwen25_0_5B.cpp  Qwen25_0_5B.h
model/layers/: BaseLayer.cpp  BaseLayer.h  Qwen2Layers.cpp  Qwen2Layers.h
model/weights_loaders/: BaseWeightsLoader.cpp  BaseWeightsLoader.h  Factory.cpp  Factory.h  SafeTensorsLoader.cpp  SafeTensorsLoader.h
operator/: ActivationOperator.cpp  ActivationOperator.h  ArithmeticOperator.cpp  ArithmeticOperator.h  Attention.cpp  Attention.h  BaseOperator.cpp  BaseOperator.h  EmbeddingOperator.cpp  EmbeddingOperator.h  Factory.cpp  Factory.h  NormOperator.cpp  NormOperator.h  VecAddOperator.cpp  VecAddOperator.h
operator/cpu/: add.cpp  add.h  embedding.cpp  embedding.h  kernel.cpp  kernel.h  kernel_impl.h
operator/cuda/: add.cu  add.cuh  kernel.cu  kernel.cuh  kernel_impl.cuh
sampler/: Sampler.cpp  Sampler.h
tensor/: Tensor.cpp  Tensor.h
tests/: CMakeLists.txt  mock_model.h  test_main.cpp  test_memory.cpp  test_models.cpp  test_operators.cpp  test_operators_impl.cpp  test_operators_impl.h  test_tokenizer.cpp  tests_main.cpp
tests/test_cases/: operators.json
tokenizer/: AutoTokenizer.cpp  AutoTokenizer.h
util/: enum.h  util.cpp  util.h
